--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -7,7 +7,7 @@
 
     .cajaIntro {
         border-radius: 4px;
-        height: 250px;
+        height: 270px;
         width: 500px;
         margin: auto;
         background-color: $background-color_2;
@@ -119,7 +119,7 @@ section {
 
     .content {
         ul {
-            padding: 0;
+            padding: 10px;
 
             li {
                 padding: 0 0 8px 26px;
@@ -166,6 +166,10 @@ section {
             position: absolute;
             right: -10px;
             top: -27px;
+        }
+
+        .testimonial-img:hover{
+            width: 250px;
         }
 
         h3 {
