--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,3 +21,5 @@ $background-color_4: #7f7f90;
 $background-color_5: lightgreen;
 $background-color_6: aliceblue;
 $border-color_1: lightgreen;
+$color_btn1:rgb(210, 240, 249);
+$color_btn2: #eef0ef;
