--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,32 +1,3 @@
-@media (max-width: 500px) {
-  .actividad {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 30px;
-    margin-bottom: 100px;
-  }
-}
-@media (min-width: 501px) and (max-width: 1023px) {
-  .actividad {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
-    margin-bottom: 100px;
-  }
-}
-@media (min-width: 1024px) {
-  .actividad {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-    margin-bottom: 100px;
-  }
-}
-@media (max-width: 460px) {
-  .testimonial-img {
-    display: none;
-  }
-}
 * {
   margin: 0;
   padding: 0;
@@ -34,6 +5,10 @@
 
 body {
   font-family: "Roboto", sans-serif;
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 .tituloPagina .tituloDos {
@@ -135,6 +110,7 @@ body {
 
 h2 {
   font-family: var(--font-secondary);
+  text-align: center;
 }
 
 section {
@@ -198,9 +174,6 @@ section {
   color: var(--color-primary);
 }
 
-.testimonials .testimonial-wrap {
-  padding-left: 50px;
-}
 .testimonials .testimonials-carousel {
   overflow: hidden;
 }
@@ -262,6 +235,10 @@ section {
   position: relative;
 }
 
+.actividad {
+  max-width: 1400px;
+  margin: 0 auto;
+}
 .actividad .act {
   display: flex;
   flex-direction: column;
@@ -270,8 +247,9 @@ section {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 .actividad .act .actImagen {
-  width: 98px;
-  height: 90px;
+  width: 120px;
+  height: 110px;
+  object-fit: contain;
   align-self: center;
   margin: auto;
 }
@@ -357,7 +335,7 @@ section {
 }
 
 #seccionNoticias {
-  margin: 50px;
+  margin: 20px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -384,19 +362,78 @@ section {
   border: none;
   margin: 0 auto;
   margin-top: 10px;
-  background: linear-gradient(to right, rgb(191, 225, 236), #eef0ef);
+  background: linear-gradient(to right, rgb(210, 240, 249), #eef0ef);
 }
 #seccionNoticias .imgNoticia {
   width: 300px;
-  margin: 20px 20px;
+  margin: 20px 100px 20px 110px;
 }
 #seccionNoticias .imgNoticia:hover {
-  width: 450px;
+  transform: scale(1.1);
+  transition: 0.2s;
 }
 
 .btnContacto {
-  background: linear-gradient(to right, rgb(191, 225, 236), #eef0ef);
+  background: linear-gradient(to right, rgb(210, 240, 249), #eef0ef);
   margin: 10px;
+}
+
+.mapa {
+  border: 0;
+  width: 100%;
+  height: 350px;
+}
+
+@media (max-width: 500px) {
+  .actividad {
+    display: grid;
+    gap: 30px;
+    margin-bottom: 100px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media (min-width: 501px) and (max-width: 1023px) {
+  .actividad {
+    display: grid;
+    gap: 30px;
+    margin-bottom: 100px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 1024px) {
+  .actividad {
+    display: grid;
+    gap: 30px;
+    margin-bottom: 100px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 460px) {
+  .testimonials .testimonial-item {
+    box-sizing: content-box;
+    padding: 30px 30px 30px 60px;
+    margin: 98px 15px;
+    min-height: 200px;
+    border: 1px solid #eef0ef;
+    position: relative;
+    background: #fff;
+  }
+  .testimonials .testimonial-item .testimonial-img {
+    width: 170px;
+    border-radius: 10px;
+    border: 5px solid #eef0ef;
+    position: absolute;
+    bottom: -85px;
+    right: 25%;
+    top: auto;
+  }
+  .testimonials .testimonials-slider {
+    overflow: hidden;
+    margin-top: -108px;
+  }
+  .section-header p {
+    font-size: 40px;
+  }
 }
 
 /*# sourceMappingURL=estilo.css.map */
