--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,32 +1,57 @@
 @media (max-width: 500px) {
     .actividad {
         display: grid;
-        grid-template-columns: repeat(1, 1fr);
         gap: 30px;
         margin-bottom: 100px;
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 
 @media (min-width: 501px) and (max-width: 1023px) {
     .actividad {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
         gap: 30px;
         margin-bottom: 100px;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (min-width: 1024px) {
     .actividad {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
         gap: 30px;
         margin-bottom: 100px;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media (max-width: 460px){
-    .testimonial-img {
-        display: none;
+@media (max-width: 460px) {
+    .testimonials .testimonial-item {
+        box-sizing: content-box;
+        padding: 30px 30px 30px 60px;
+        margin: 98px 15px;
+        min-height: 200px;
+        border: 1px solid #eef0ef;
+        position: relative;
+        background: #fff;
+    }
+
+    .testimonials .testimonial-item .testimonial-img {
+        width: 170px;
+        border-radius: 10px;
+        border: 5px solid #eef0ef;
+        position: absolute;
+        bottom: -85px;
+        right: 25%;
+        top: auto;
+    }
+
+    .testimonials .testimonials-slider {
+        overflow: hidden;
+        margin-top: -108px;
+    }
+
+    .section-header p {
+        font-size: 40px;
     }
 }
