--- a/css/estilo.css
+++ b/css/estilo.css
@@ -179,26 +179,28 @@ section {
 }
 .testimonials .testimonials-slider {
   overflow: hidden;
+  margin-top: -40px;
+  margin-bottom: -80px;
 }
 .testimonials .testimonial-item {
   box-sizing: content-box;
-  padding: 30px 30px 30px 60px;
-  margin: 30px 15px;
+  padding: 30px 30px 0px 60px;
+  margin: 90px 10px;
   min-height: 200px;
   border: 1px solid #eef0ef;
   position: relative;
   background: #fff;
 }
 .testimonials .testimonial-item .testimonial-img {
-  width: 170px;
+  width: 255px;
   border-radius: 10px;
   border: 5px solid #eef0ef;
   position: absolute;
   right: -10px;
-  top: -27px;
+  top: -85px;
 }
 .testimonials .testimonial-item .testimonial-img:hover {
-  width: 250px;
+  width: 300px;
 }
 .testimonials .testimonial-item h3 {
   font-size: 18px;
@@ -342,10 +344,11 @@ section {
   justify-content: center;
   background-color: aliceblue;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 60px;
 }
 #seccionNoticias .txtNot {
-  max-width: 600px;
-  margin: 0 auto;
+  max-width: 650px;
+  margin: 30px auto;
   text-align: center;
 }
 #seccionNoticias .tituloNoticia {
@@ -353,6 +356,7 @@ section {
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 45px;
+  font-weight: bold;
 }
 #seccionNoticias .btnNot {
   display: block;
@@ -364,18 +368,25 @@ section {
   margin-top: 10px;
   background: linear-gradient(to right, rgb(210, 240, 249), #eef0ef);
 }
+#seccionNoticias .btnNot:hover {
+  background: rgb(193, 228, 238);
+}
 #seccionNoticias .imgNoticia {
-  width: 300px;
-  margin: 20px 100px 20px 110px;
+  width: 450px;
+  margin: 25px 100px 10px 110px;
 }
 #seccionNoticias .imgNoticia:hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
   transition: 0.2s;
 }
 
 .btnContacto {
   background: linear-gradient(to right, rgb(210, 240, 249), #eef0ef);
   margin: 10px;
+}
+
+.btnContacto:hover {
+  background: rgb(193, 228, 238);
 }
 
 .mapa {
@@ -433,6 +444,25 @@ section {
   }
   .section-header p {
     font-size: 40px;
+  }
+  .testimonials .testimonial-item .testimonial-img:hover {
+    width: 170px;
+  }
+}
+@media (max-width: 500px) {
+  #seccionNoticias {
+    padding: 30px;
+  }
+  #seccionNoticias .imgNoticia {
+    width: 290px;
+  }
+}
+@media (min-width: 501px) and (max-width: 1023px) {
+  #seccionNoticias {
+    padding: 30px;
+  }
+  #seccionNoticias .imgNoticia {
+    width: 380px;
   }
 }
 
