--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -145,28 +145,30 @@ section {
 
     .testimonials-slider {
         overflow: hidden;
+        margin-top: -40px;
+        margin-bottom: -80px;
     }
 
     .testimonial-item {
         box-sizing: content-box;
-        padding: 30px 30px 30px 60px;
-        margin: 30px 15px;
+        padding: 30px 30px 0px 60px;
+        margin: 90px 10px;
         min-height: 200px;
         border: 1px solid #eef0ef;
         position: relative;
         background: #fff;
 
         .testimonial-img {
-            width: 170px;
+            width: 255px;
             border-radius: 10px;
             border: 5px solid #eef0ef;
             position: absolute;
             right: -10px;
-            top: -27px;
+            top: -85px;
         }
 
-        .testimonial-img:hover{
-            width: 250px;
+        .testimonial-img:hover {
+            width: 300px;
         }
 
         h3 {
