--- a/scss/_noticias.scss
+++ b/scss/_noticias.scss
@@ -6,10 +6,11 @@
     justify-content: center;
     background-color: $background-color_6;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 60px;
 
     .txtNot {
-        max-width: 600px;
-        margin: 0 auto;
+        max-width: 650px;
+        margin: 30px auto;
         text-align: center;
     }
 
@@ -18,6 +19,7 @@
         text-align: center;
         text-transform: uppercase;
         margin-bottom: 45px;
+        font-weight: bold;
     }
 
     .btnNot {
@@ -31,13 +33,17 @@
         @include btnGradiente
     }
 
+    .btnNot:hover{
+        background: rgb(193, 228, 238);
+    }
+
     .imgNoticia {
-        width: 300px;
-        margin: 20px 100px 20px 110px;
+        width: 450px;
+        margin: 25px 100px 10px 110px;
     }
 
     .imgNoticia:hover{
-        transform: scale(1.1);
+        transform: scale(1.2);
         transition: .2s;
     }
 }
